# principles-of-economics

./: .gitignore  .pre-commit-config.yaml  _typos.toml  pyproject.toml  sp500_monthly_change.csv
.github/workflows/: update-data.yml
data/csv/: hsi_annual_change.csv  hsi_monthly_change.csv  hsi_weekly_change.csv  nasdaq100_weighted_pe_history.csv  nasdaq_annual_change.csv  nasdaq_monthly_change.csv  nasdaq_weekly_change.csv  sp500_annual_change.csv  sp500_monthly_change.csv  sp500_weekly_change.csv  sp500_weighted_pe_history.csv
src/: main.py  test.py  utils.py  需求价格弹性.py
src/hsi/: monthly_change.py
src/nasdaq/: calculate_pe.py  monthly_change.py
src/sp500/: analysis.py  calculate_pe.py  download.py  monthly_change.py
tests/: mian.py  mian_test.py
