[project]
name = "principles-of-economics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "matplotlib>=3.10.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.59",
]

# [tool.uv]
# index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
